--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -3,9 +3,8 @@ version: '3.3'
 services:
   db:
     image: postgres:9.6 # Required version to run tests with Rails 4
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER:-planner}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-planner}
+    volumes:
+      - ./app:/srv/app/app
 
   web:
     volumes:
