Introduce max_ride_ distance and duration

--- a/test/fixtures/stops.yml
+++ b/test/fixtures/stops.yml
@@ -13,6 +13,8 @@ stop_unaffected:
   out_of_drive_time: false
   out_of_work_time: false
   out_of_max_distance: false
+  out_of_max_ride_distance: false
+  out_of_max_ride_duration: false
 
 stop_one_one:
   type: StopVisit
@@ -27,6 +29,8 @@ stop_one_one:
   out_of_drive_time: false
   out_of_work_time: false
   out_of_max_distance: false
+  out_of_max_ride_distance: false
+  out_of_max_ride_duration: false
 
 stop_one_two:
   type: StopVisit
@@ -41,6 +45,8 @@ stop_one_two:
   out_of_drive_time: false
   out_of_work_time: false
   out_of_max_distance: false
+  out_of_max_ride_distance: false
+  out_of_max_ride_duration: false
 
 stop_one_three:
   type: StopVisit
@@ -55,6 +61,8 @@ stop_one_three:
   out_of_drive_time: false
   out_of_work_time: false
   out_of_max_distance: false
+  out_of_max_ride_distance: false
+  out_of_max_ride_duration: false
 
 # rest defined in vehicle_usage_set_one/vehicle_usage_one_three
 stop_one_four:
@@ -100,6 +108,8 @@ stop_two_one:
   out_of_drive_time: false
   out_of_work_time: false
   out_of_max_distance: false
+  out_of_max_ride_distance: false
+  out_of_max_ride_duration: false
 
 # INVALID: visit_one referenced by stop_one_one
 stop_three_one:
@@ -115,6 +125,8 @@ stop_three_one:
   out_of_drive_time: false
   out_of_work_time: false
   out_of_max_distance: false
+  out_of_max_ride_distance: false
+  out_of_max_ride_duration: false
 
 # rest defined in vehicle_usage_set_one/vehicle_usage_one_three
 stop_three_two:
@@ -139,6 +151,8 @@ stop_four_unaffected_one:
   out_of_drive_time: false
   out_of_work_time: false
   out_of_max_distance: false
+  out_of_max_ride_distance: false
+  out_of_max_ride_duration: false
 
 stop_four_two:
   type: StopVisit
@@ -153,6 +167,8 @@ stop_four_two:
   out_of_drive_time: false
   out_of_work_time: false
   out_of_max_distance: false
+  out_of_max_ride_distance: false
+  out_of_max_ride_duration: false
 
 stop_four_three:
   type: StopVisit
@@ -167,6 +183,8 @@ stop_four_three:
   out_of_drive_time: false
   out_of_work_time: false
   out_of_max_distance: false
+  out_of_max_ride_distance: false
+  out_of_max_ride_duration: false
 
 stop_four_five:
   type: StopVisit
@@ -181,3 +199,5 @@ stop_four_five:
   out_of_drive_time: false
   out_of_work_time: false
   out_of_max_distance: false
+  out_of_max_ride_distance: false
+  out_of_max_ride_duration: false
