--- a/.env.template
+++ b/.env.template
@@ -1,4 +1,4 @@
-# COMPOSE_FILE=docker-compose.yml:docker-compose-dev.yml
+# COMPOSE_FILE=docker-compose.yml:docker-compose-dev.yml:docker-compose-superset.yml
 
 GEOCODER_URL=http://localhost:8081/0.1
 GEOCODER_API_KEY=demo
