Fix delayed_job in docker with simplification

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,7 +44,9 @@ services:
 
   delayed-job:
     <<: *web
-    command: bash -c "LD_PRELOAD=/usr/lib/x86_64-linux-gnu/libjemalloc.so.2 ./start_delayed_job.sh -n 4"
+    command: bash -c "LD_PRELOAD=/usr/lib/x86_64-linux-gnu/libjemalloc.so.2 bundle exec './bin/delayed_job run'"
+    deploy:
+      replicas: 4
 
 volumes:
   pg_data:
