--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -53,7 +53,7 @@ jobs:
           ruby-version: '3.0.6'
       # Add or replace any other lints here
       - name: Security audit dependencies
-        run: bin/bundler-audit --update
+        run: bin/rake bundle:audit
       - name: Security audit application code
         run: bin/brakeman -q -w2
       - name: Lint Ruby files
