--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "presets": [
     [
-      "env",
+      "@babel/preset-env",
       {
         "modules": false,
         "targets": {
@@ -9,21 +9,21 @@
             "> 1%",
             "IE 10",
             "IE 9"
-          ],
-          "uglify": true
+          ]
         },
-        "useBuiltIns": true
+        "forceAllTransforms": true,
+        "useBuiltIns": "entry"
       }
     ],
-    "react"
+    "@babel/preset-react"
   ],
   "plugins": [
-    "syntax-dynamic-import",
-    "transform-object-rest-spread",
+    "@babel/plugin-syntax-dynamic-import",
+    "@babel/plugin-proposal-object-rest-spread",
     [
-      "transform-class-properties",
+      "@babel/plugin-proposal-class-properties",
       {
-        "spec": true
+        "loose": false
       }
     ]
   ]
