--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "dependencies": {
-    "@rails/webpacker": "3.2.1",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-react": "^7.24.7",
+    "@rails/webpacker": "5.4.4",
     "babel-preset-react": "^6.24.1",
     "bootstrap": "3.4.1",
     "bootstrap-datepicker": "1.7.1",
     "bootstrap-filestyle": "1.2.1",
     "bootstrap-select": "1.12.4",
     "bootstrap-slider": "10.0.0",
-    "expose-loader": "0.7.4",
+    "expose-loader": "1",
     "jquery": "2.2.4",
     "jquery-simplecolorpicker": "0.3.1",
     "jquery-ui": "^1.12.1",
@@ -22,6 +25,8 @@
     "leaflet.markercluster": "1.3.0",
     "pnotify": "3.2.1",
     "polyline-encoded": "0.0.8",
+    "postcss": "^7.0.39",
+    "postcss-preset-env": "^6.7.0",
     "prop-types": "^15.7.2",
     "rails-erb-loader": "5.2.1",
     "react": "^16.8.2",
@@ -30,10 +35,12 @@
     "select2": "4.0.6-rc.1",
     "select2-bootstrap-theme": "0.1.0-beta.10",
     "sidebar-v2": "0.3.1",
-    "tablesorter": "2.31.3"
+    "tablesorter": "2.31.3",
+    "webpack": "^4.46.0",
+    "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.11.1"
+    "webpack-dev-server": "^3"
   },
   "resolutions": {
     "node-sass": "link:./node_modules/.cache/null"
