--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -29,11 +29,23 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
       # Add or replace dependency steps here
+      - name: Install dependencies
+        run: sudo apt install -y libz-dev libicu-dev build-essential g++ libgeos-dev libgeos++-dev
       - name: Install Ruby and gems
         uses: ruby/setup-ruby@55283cc23133118229fd3f97f9336ee23a179fcf # v1.146.0
         with:
           bundler-cache: true
           ruby-version: '3.0.6'
+      - name: Set Node.js 14.x
+        uses: actions/setup-node@v3
+        with:
+          node-version: 14.x
+      - name: Run install
+        uses: borales/actions-yarn@v4
+        with:
+          cmd: install # will run `yarn install` command
+      - name: Webpack compilation
+        run: NODE_ENV=test bin/rails webpacker:compile
       # Add or replace database setup steps here
       - name: Set up database schema
         run: bin/rails db:setup
