--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -30,7 +30,10 @@ jobs:
         uses: actions/checkout@v4
       # Add or replace dependency steps here
       - name: Install dependencies
-        run: sudo apt install -y libz-dev libicu-dev build-essential g++ libgeos-dev libgeos++-dev
+        uses: awalsh128/cache-apt-pkgs-action@latest
+        with:
+          packages: libz-dev libicu-dev build-essential g++ libgeos-dev libgeos++-dev
+          version: 1.0
       - name: Install Ruby and gems
         uses: ruby/setup-ruby@55283cc23133118229fd3f97f9336ee23a179fcf # v1.146.0
         with:
