More configurable docker compose

--- a/.env.template
+++ b/.env.template
@@ -9,3 +9,6 @@ OPTIMIZER_API_KEY=demo
 SENTRY_DSN=http://public:secret@example.com/project-id
 
 HERE_MAP_APIKEY=
+
+PUMA_WORKERS=0:1 # Prod eg. 1:4
+DELAYED_JOB_REPLICAS=1 # prod eg. 4
