--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,13 +40,13 @@ services:
     <<: *web
     ports:
       - "8080:8080" # HOST:CONTAINER, edit only HOST part
-    command: bash -c "LD_PRELOAD=/usr/lib/x86_64-linux-gnu/libjemalloc.so.2 bundle exec puma -v -p 8080 --pidfile 'server.pid'"
+    command: bash -c "LD_PRELOAD=/usr/lib/x86_64-linux-gnu/libjemalloc.so.2 bundle exec puma -v -p 8080 --pidfile 'server.pid' -t ${PUMA_WORKERS:-0:1}"
 
   delayed-job:
     <<: *web
     command: bash -c "LD_PRELOAD=/usr/lib/x86_64-linux-gnu/libjemalloc.so.2 bundle exec './bin/delayed_job run'"
     deploy:
-      replicas: 4
+      replicas: ${DELAYED_JOB_REPLICAS:-1}
 
 volumes:
   pg_data:
