--- a/test/fixtures/zones.yml
+++ b/test/fixtures/zones.yml
@@ -2,13 +2,13 @@
 
 zone_one:
   name: zone_one
-  polygon: "{\"type\":\"Feature\",\"geometry\":{\"type\":\"Polygon\",\"coordinates\":[[[-0.9777832031250001,49.53946900793534],[0.823974609375,49.475263243037986],[0.52734375,48.480204398955145],[-1.8896484375,48.36354888898689],[-1.5600585937499998,49.1242192485914],[-0.9777832031250001,49.53946900793534]]]}}"
+  polygon: "{\"type\":\"Feature\",\"geometry\":{\"type\":\"Polygon\",\"coordinates\":[[[-0.977783,49.539469],[0.823975,49.475263],[0.527344,48.480204],[-1.889648,48.363549],[-1.560059,49.124219],[-0.977783,49.539469]]]}}"
   zoning: zoning_one
   vehicle: vehicle_one
 
 zone_two:
   name: zone_two
-  polygon: "{\"type\":\"Feature\",\"properties\":{},\"geometry\":{\"type\":\"Polygon\",\"coordinates\":[[[-0.9777832031250001,49.53946900793534],[0.823974609375,49.475263243037986],[0.52734375,48.480204398955145],[-1.8896484375,48.36354888898689],[-1.5600585937499998,49.1242192485914],[-0.9777832031250001,49.53946900793534]]]}}"
+  polygon: "{\"type\":\"Feature\",\"properties\":{},\"geometry\":{\"type\":\"Polygon\",\"coordinates\":[[[-0.977783,49.539469],[0.823975,49.475263],[0.527344,48.480204],[-1.889648,48.363549],[-1.560059,49.124219],[-0.977783,49.539469]]]}}"
   zoning: zoning_one
   vehicle:
 
@@ -23,6 +23,6 @@ zone_four:
   vehicle:
 
 zone_five:
-  polygon: "{\"type\":\"Feature\",\"geometry\":{\"type\":\"GeometryCollection\",\"geometries\":[{\"type\":\"Polygon\",\"coordinates\":[[[-0.9777832031250001,49.53946900793534],[0.823974609375,49.475263243037986],[0.52734375,48.480204398955145],[-1.8896484375,48.36354888898689],[-1.5600585937499998,49.1242192485914],[-0.9777832031250001,49.53946900793534]]]}]}}"
+  polygon: "{\"type\":\"Feature\",\"geometry\":{\"type\":\"GeometryCollection\",\"geometries\":[{\"type\":\"Polygon\",\"coordinates\":[[[-0.977783,49.539469],[0.823975,49.475263],[0.527344,48.480204],[-1.889648,48.363549],[-1.560059,49.124219],[-0.977783,49.539469]]]}]}}"
   zoning: zoning_five
   vehicle:
