Fix .env.template format

--- a/.env.template
+++ b/.env.template
@@ -1,6 +1,7 @@
 # COMPOSE_FILE=docker-compose.yml:docker-compose-dev.yml:docker-compose-superset.yml
 
-WEB_BIND= # [ip]:port
+# [ip]:port
+WEB_BIND=
 
 GEOCODER_URL=http://localhost:8081/0.1
 GEOCODER_API_KEY=demo
