--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,8 +38,6 @@ services:
 
   web:
     <<: *web
-    ports:
-      - "${WEB_BIND:-8080}:8080" # HOST:CONTAINER, edit only HOST part
     command: bash -c "LD_PRELOAD=/usr/lib/x86_64-linux-gnu/libjemalloc.so.2 bundle exec puma -v -p 8080 --pidfile 'server.pid' -t ${PUMA_WORKERS:-0:1}"
 
   delayed-job:
@@ -47,6 +45,21 @@ services:
     command: bash -c "LD_PRELOAD=/usr/lib/x86_64-linux-gnu/libjemalloc.so.2 bundle exec './bin/delayed_job run'"
     deploy:
       replicas: ${DELAYED_JOB_REPLICAS:-1}
+
+  traefik:
+    image: traefik:v3.2
+    command:
+      - --configFile=/traefik.yml
+    ports:
+      - ${WEB_BIND:-8080}:8080
+      - 127.0.0.1:8280:8080 # Dashborad
+    volumes:
+      - ./traefik.yml:/etc/traefik/traefik.yml
+      - ./traefik-services.yml:/traefik-services.yml
+      - /var/run/docker.sock:/var/run/docker.sock:ro
+    depends_on:
+      - web
+    restart: unless-stopped
 
 volumes:
   pg_data:
