--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -106,6 +106,8 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          labels: |
+            org.opencontainers.image.description=${{ env.branch }}.${{ env.sha_short }} ${{ github.event.head_commit.message }}
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
