--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ x-web: &web
     OPTIMIZER_API_KEY: ${OPTIMIZER_API_KEY:-demo}
     SENTRY_DSN: ${SENTRY_DSN}
     HERE_MAP_APIKEY: ${HERE_MAP_APIKEY}
+    LOG_FORMAT: ${LOG_FORMAT}
   volumes:
     - ./config/database.yml.docker:/srv/app/config/database.yml
     - ./docker/production.rb:/srv/app/config/environments/production.rb
