--- a/traefik-services.yml
+++ b/traefik-services.yml
@@ -14,6 +14,11 @@ http:
           - url: http://web:8080
         healthcheck:
           path: /
+        sticky:
+          cookie:
+            secure: true
+            httpOnly: true
+            samesite: none
 
   middlewares:
     retry:
