--- a/docker/traefik/traefik.yml
+++ b/docker/traefik/traefik.yml
@@ -5,6 +5,10 @@ providers:
 entryPoints:
   web:
     address: :8080
+    forwardedHeaders:
+      insecure: true
+      trustedIPs:
+        - "0.0.0.0/0"
 
 # api:
 #   insecure: true
