Add URL shortener

--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,10 @@
-# COMPOSE_FILE=docker-compose.yml:docker-compose-dev.yml:docker-compose-superset.yml
+# COMPOSE_FILE=docker-compose.yml:docker-compose-dev.yml:docker-compose-qr-shortener.yml:docker-compose-superset.yml
 
 # [ip]:port
 WEB_BIND=
+SHORTNER_BIND=
+
+URL_SHORTNER_PUBLIC=
 
 GEOCODER_URL=http://localhost:8081/0.1
 GEOCODER_API_KEY=demo
