--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,6 +53,7 @@ services:
       - --configFile=/etc/traefik/traefik.yml
     ports:
       - ${WEB_BIND:-8080}:8080
+      - ${SHORTNER_BIND:-8635}:8635
       - 127.0.0.1:8280:8080 # Dashboard
     volumes:
       - ./docker/traefik/traefik.yml:/etc/traefik/traefik.yml
