Init CO2 average contact display

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -27,7 +27,8 @@
         "donjayamanne.git-extension-pack",
         "ms-azuretools.vscode-docker",
         "vayan.haml",
-        "imgildev.vscode-mustache-snippets"
+        "imgildev.vscode-mustache-snippets",
+        "lokalise.i18n-ally"
       ]
     }
   },
