--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
     "@rails/webpacker": "3.2.1",
-    "babel-preset-react": "^6.24.1",
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@babel/preset-react": "^7.23.2",
+    "babel-loader": "^8.3.0",
     "bootstrap": "3.4.1",
     "bootstrap-datepicker": "1.7.1",
     "bootstrap-filestyle": "1.2.1",
@@ -33,6 +36,12 @@
     "tablesorter": "2.31.3"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-destructuring": "^7.23.2",
+    "@babel/plugin-transform-regenerator": "^7.23.2",
+    "@babel/plugin-transform-runtime": "^7.23.2",
     "webpack-dev-server": "^2.11.1"
   },
   "resolutions": {
