--- a/test/fixtures/customers.yml
+++ b/test/fixtures/customers.yml
@@ -12,7 +12,7 @@ customer_one:
   enable_orders: true
   optimization_time: 10
   optimization_minimal_time: 3
-  enable_optimization_soft_upper_bound: true
+  enable_optimization_soft_upper_bound: false
   optimization_stop_soft_upper_bound: 3
   optimization_vehicle_soft_upper_bound: 3
   stop_max_upper_bound: 120
