--- a/test/fixtures/deliverable_units.yml
+++ b/test/fixtures/deliverable_units.yml
@@ -7,6 +7,7 @@ deliverable_unit_one_one:
   default_quantity: 1
   default_capacity:
   optimization_overload_multiplier:
+  default_initial_load:
   customer: customer_one
 
 deliverable_unit_one_two:
@@ -16,6 +17,7 @@ deliverable_unit_one_two:
   default_quantity:
   default_capacity:
   optimization_overload_multiplier:
+  default_initial_load:
   customer: customer_one
 
 deliverable_unit_one_other_one:
@@ -25,6 +27,7 @@ deliverable_unit_one_other_one:
   default_quantity: 1
   default_capacity:
   optimization_overload_multiplier: 1
+  default_initial_load:
   customer: customer_one_other
 
 deliverable_unit_two_one:
@@ -34,4 +37,5 @@ deliverable_unit_two_one:
   default_quantity: 1
   default_capacity: 10
   optimization_overload_multiplier: 1
+  default_initial_load:
   customer: customer_two
