--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ x-web: &web
 
 services:
   db:
-    image: postgres:15
+    image: postgis/postgis:15-3.5
     environment:
       - POSTGRES_HOST_AUTH_METHOD=trust
     volumes:
