--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -2,9 +2,9 @@ name: "Ruby on Rails CI"
 
 on:
   push:
-    branches: [master, dev]
+    branches: [master, dev, dev2]
   pull_request:
-    branches: [master, dev]
+    branches: [master, dev, dev2]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
