--- a/test/fixtures/visits.yml
+++ b/test/fixtures/visits.yml
@@ -3,7 +3,8 @@
 visit_unaffected_one:
   destination: destination_unaffected_one # customer_one
   ref: a
-  quantities:
+  pickups:
+  deliveries:
   duration: 00:01:00
   time_window_start_1: 10:00:00
   time_window_end_1: 11:00:00
@@ -13,7 +14,8 @@ visit_one:
   id: 1 # Refered by tomtom web mock as encoded string ":v1"
   destination: destination_one # customer_one
   ref: b
-  quantities:
+  pickups:
+  deliveries:
   duration: 00:05:33
   time_window_start_1: 10:00:00
   time_window_end_1: 11:00:00
@@ -23,7 +25,8 @@ visit_one:
 visit_two:
   destination: destination_two # customer_one with tag one
   ref: c
-  quantities: '"1" => "3", "999" => "1"'
+  pickups:
+  deliveries: '"1" => "3", "999" => "1"'
   time_window_start_1: 10:00:00
   time_window_end_1: 11:00:00
   tags: tag_one
@@ -31,7 +34,8 @@ visit_two:
 visit_three:
   destination: destination_three # customer_one
   ref: d
-  quantities: '"1" => "3"'
+  pickups:
+  deliveries: '"1" => "3"'
   time_window_start_1: 10:00:00
   time_window_end_1: 11:00:00
   tags: tag_one
