--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -89,5 +89,6 @@ jobs:
       - name: Docker Build and Push
         uses: cartoway/docker-compose-build-push-action@main
         with:
+          project: planner
           registry_password: ${{ secrets.GITHUB_TOKEN }}
           service: web
