--- a/test/fixtures/vehicles.yml
+++ b/test/fixtures/vehicles.yml
@@ -5,7 +5,7 @@ vehicle_one:
   name: vehicle_one
   emission: 1.5
   consumption: 1.5
-  capacities: '"1" => "1", "999" => "1"'
+  capacities: { 1: 1.0, 999: 1.0 }
   color: "#004499"
   customer: customer_one
   speed_multiplier:
@@ -22,7 +22,7 @@ vehicle_two:
   name: vehicle_two
   emission: 1.5
   consumption: 1.5
-  capacities: '"4" => "1"'
+  capacities: { 4: 1.0 }
   color: "#004499"
   customer: customer_two
   speed_multiplier: 0.9
@@ -32,7 +32,7 @@ vehicle_three:
   name: vehicle_three
   emission: 1.5
   consumption: 1.5
-  capacities: '"1" => "3"'
+  capacities: { 1: 3.0 }
   color: "#00FF00"
   customer: customer_one
   speed_multiplier:
@@ -43,7 +43,7 @@ vehicle_four:
   name: vehicle_four
   emission: 1.5
   consumption: 1.5
-  capacities: '"3" => "3"'
+  capacities: { 3: 3.0 }
   color: "#004499"
   customer: customer_one_other
   speed_multiplier:
