--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -2,11 +2,11 @@ name: "Ruby on Rails CI"
 
 on:
   push:
-    branches: [master, dev]
+    branches: [master, dev, dev2]
     tags:
       - 'v*'
   pull_request:
-    branches: [master, dev]
+    branches: [master, dev, dev2]
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -80,7 +80,7 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     needs: [test, lint]
-    if: github.ref == 'refs/heads/dev' || startsWith(github.event.ref, 'refs/tags/v')
+    if: github.ref == 'refs/heads/dev' || startsWith(github.event.ref, 'refs/tags/v') || github.ref == 'refs/heads/dev2'
 
     permissions:
       contents: read
