--- a/docker/superset_nginx/superset.conf
+++ b/docker/superset_nginx/superset.conf
@@ -29,14 +29,23 @@ server {
     }
 
     location /api/v1/chart/data {
+        lua_need_request_body on;
         rewrite_by_lua_block {
-            ngx.req.read_body()
-            local body_data = ngx.req.get_body_data()
-            if not body_data then
-                local f = assert(io.open(ngx.req.get_body_file(), "rb"))
-                body_data = f:read("*all")
-                f:close()
+            local body_data = nil
+
+            local form_data = ngx.req.get_post_args()
+            if form_data and form_data['form_data'] then
+                body_data = form_data['form_data']
+            else
+                ngx.req.read_body()
+                body_data = ngx.req.get_body_data()
+                if not body_data then
+                    local f = assert(io.open(ngx.req.get_body_file(), "rb"))
+                    body_data = f:read("*all")
+                    f:close()
+                end
             end
+
             if body_data then
                 local json_body = cjson.decode(body_data)
                 local filters = json_body['queries'] and json_body['queries'][1] and json_body['queries'][1]['filters']
