--- a/.github/workflows/rubyonrails.yml
+++ b/.github/workflows/rubyonrails.yml
@@ -3,6 +3,8 @@ name: "Ruby on Rails CI"
 on:
   push:
     branches: [master, dev]
+    tags:
+      - 'v*'
   pull_request:
     branches: [master, dev]
 
@@ -78,7 +80,7 @@ jobs:
   docker:
     runs-on: ubuntu-latest
     needs: [test, lint]
-    if: github.ref == 'refs/heads/dev'
+    if: github.ref == 'refs/heads/dev' || startsWith(github.event.ref, 'refs/tags/v')
 
     permissions:
       contents: read
