Make nginx superset filter work in all post data case

--- a/docker/superset_nginx/superset.conf
+++ b/docker/superset_nginx/superset.conf
@@ -31,18 +31,51 @@ server {
     location /api/v1/chart/data {
         lua_need_request_body on;
         rewrite_by_lua_block {
-            local body_data = nil
-
-            local form_data = ngx.req.get_post_args()
-            if form_data and form_data['form_data'] then
-                body_data = form_data['form_data']
-            else
+            local function get_body_data()
                 ngx.req.read_body()
-                body_data = ngx.req.get_body_data()
-                if not body_data then
-                    local f = assert(io.open(ngx.req.get_body_file(), "rb"))
-                    body_data = f:read("*all")
-                    f:close()
+                local body = ngx.req.get_body_data()
+                if not body then
+                    local body_file = ngx.req.get_body_file()
+                    if body_file then
+                        local file = io.open(body_file, "rb")
+                        if file then
+                            body = file:read("*all")
+                            file:close()
+                        end
+                    end
+                end
+                return body
+            end
+
+            local function url_decode(str)
+                return str:gsub('+', ' '):gsub('%%(%x%x)', function(h)
+                    return string.char(tonumber(h, 16))
+                end)
+            end
+
+            local function extract_form_field(raw_body, field_name)
+                for pair in raw_body:gmatch("[^&]+") do
+                    local key, value = pair:match("([^=]+)=(.+)")
+                    if key and value then
+                        key = url_decode(key)
+                        if key == field_name then
+                            return url_decode(value)
+                        end
+                    end
+                end
+
+                return nil
+            end
+
+            local body_data = get_body_data()
+            local content_type = ngx.var.content_type or ""
+            if content_type:find("application/x%-www%-form%-urlencoded") then
+                body_data = extract_form_field(body_data, "form_data")
+                if body_data then
+                    if body_data:sub(1, 1) == '`' and body_data:sub(-1) == '`' then
+                        ngx.log(ngx.STDERR, "Removing backquotes")
+                        body_data = body_data:sub(2, -2)
+                    end
                 end
             end
 
