--- a/docker-compose-superset.yml
+++ b/docker-compose-superset.yml
@@ -1,9 +1,10 @@
 services:
   superset:
-    image: superset
+    image: superset:3.1.3
     build:
       context: docker/superset
     depends_on:
+      - db
       - superset_redis
     environment:
       SUPERSET_SECRET_KEY: lkfzoiezhfoizehfoizhoihfopizajfoizafjpoizaufepoaz
