--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,8 +5,8 @@
   // Update the 'dockerComposeFile' list if you have more compose files or use different names.
   // The .devcontainer/docker-compose.yml file contains any overrides you need/want to make.
   "dockerComposeFile": [
-    "../docker-compose.yml",
-    "../docker-compose-qr-shortener.yml"
+    "docker-compose.yml",
+    "docker-compose-qr-shortener.yml"
   ],
   // The 'service' property is the name of the service for the container that VS Code should
   // use. Update this value and .devcontainer/docker-compose.yml to the real service name.
@@ -31,7 +31,7 @@
       ]
     }
   },
-  "initializeCommand": "cp ./.dockerignore-development ./.dockerignore && cp ./docker/production.rb.devcontainer config/environments/production.rb"
+  "initializeCommand": "cp .devcontainer/.dockerignore ../.dockerignore",
   // Uncomment the next line if you want start specific services in your Docker Compose config.
   // "runServices": [],
   // Uncomment the next line if you want to keep your containers running after VS Code shuts down.
