--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@babel/core": "^7.23.2",
     "@babel/preset-env": "^7.23.2",
     "@babel/preset-react": "^7.23.2",
+    "@geoman-io/leaflet-geoman-free": "2.12.0",
     "@rails/webpacker": "3.2.1",
     "babel-loader": "^8.3.0",
     "bootstrap": "3.4.1",
@@ -15,15 +16,14 @@
     "jquery-simplecolorpicker": "0.3.1",
     "jquery-ui": "^1.12.1",
     "jquery-ujs": "1.2.2",
-    "leaflet": "1.0.3",
+    "leaflet": "1.9.1",
     "leaflet-control-geocoder": "1.5.8",
-    "leaflet-draw": "0.4.9",
     "leaflet-hash": "0.2.1",
     "leaflet-lasso": "^2.2.13",
     "leaflet-pip": "1.1.0",
     "leaflet-polylineoffset": "1.1.1",
-    "leaflet-responsive-popup": "0.2.0",
-    "leaflet.markercluster": "1.3.0",
+    "leaflet-responsive-popup": "1.0.0",
+    "leaflet.markercluster": "^1.5.3",
     "pnotify": "3.2.1",
     "polyline-encoded": "0.0.8",
     "prop-types": "^15.7.2",
