--- a/.dockerignore
+++ b/.dockerignore
@@ -1,16 +1,17 @@
-docker
-Dockerfile
-docker-compose.yml
-docker-compose-*.yml
-.git
 .dockerignore
-.github
 .env
-node_modules
-log/*
+.git
+.github
 delayed_job_logs
+docker
+docker-compose-*.yml
+docker-compose.yml
+Dockerfile
+log/*
+node_modules
 public/api-web/
 public/assets/
 public/javascripts/
 public/packs/
 public/upload/
+tmp
