--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -5,7 +5,7 @@
   // Update the 'dockerComposeFile' list if you have more compose files or use different names.
   // The .devcontainer/docker-compose.yml file contains any overrides you need/want to make.
   "dockerComposeFile": [
-    "../docker-compose.yml",
+    "../.devcontainer/docker-compose.yml",
     "../docker-compose-qr-shortener.yml"
   ],
   // The 'service' property is the name of the service for the container that VS Code should
@@ -31,7 +31,7 @@
       ]
     }
   },
-  "initializeCommand": "cp ./.dockerignore-development ./.dockerignore && cp ./docker/production.rb.devcontainer config/environments/production.rb"
+  // "initializeCommand": "cp ./.dockerignore-development ./.dockerignore"
   // Uncomment the next line if you want start specific services in your Docker Compose config.
   // "runServices": [],
   // Uncomment the next line if you want to keep your containers running after VS Code shuts down.
