Disable docker healthcheck for delayed-job

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -59,6 +59,8 @@ services:
   delayed-job:
     <<: *web
     command: bash -c "LD_PRELOAD=/usr/lib/x86_64-linux-gnu/libjemalloc.so.2 bundle exec './bin/delayed_job run'"
+    healthcheck:
+      disable: true
     deploy:
       replicas: ${DELAYED_JOB_REPLICAS:-1}
 
