Add AVAILABLE_SOLVERS as a docker env variable

--- a/.env.template
+++ b/.env.template
@@ -12,6 +12,8 @@ ROUTER_URL=http://localhost:8082/0.1
 ROUTER_API_KEY=demo
 OPTIMIZER_URL=http://localhost:8083/0.1
 OPTIMIZER_API_KEY=demo
+# Restrict the solvers reachable through OPTIMIZER-API: vroom,ortools,pyvrp
+AVAILABLE_SOLVERS=
 SENTRY_DSN=http://public:secret@example.com/project-id
 
 HERE_MAP_APIKEY=
