--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ x-web: &web
     HERE_MAP_APIKEY: ${HERE_MAP_APIKEY:-}
     LOG_FORMAT: ${LOG_FORMAT:-}
     URL_SHORTENER: ${URL_SHORTENER:-http://url_shortener:8635}
+    AVAILABLE_SOLVERS: ${AVAILABLE_SOLVERS:-}
   volumes:
     - ./config/database.yml.docker:/srv/app/config/database.yml
     - ./docker/production.rb:/srv/app/config/environments/production.rb
