--- a/test/fixtures/vehicle_usage_sets.yml
+++ b/test/fixtures/vehicle_usage_sets.yml
@@ -12,6 +12,7 @@ vehicle_usage_set_one:
   rest_duration: 01:00:00
   store_rest:
   max_distance: 30000
+  max_reload: 1
 
 vehicle_usage_set_two:
   name: vehicle_usage_set_two
@@ -36,6 +37,7 @@ vehicle_usage_set_three:
   rest_stop: 14:00:00
   rest_duration: 00:45:00
   store_rest:
+  max_reload: 1
 
 vehicle_usage_set_four:
   name: vehicle_four
